# halo

./: .gitignore  DEPLOYMENT.md  README.md  cloudbuild.yaml  deploy.sh
.beads/: config.json
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  results.json  run_pipeline.py  run_rca.py  test_gate1.py  test_gate2.py
backend/config/: __init__.py  anomaly_config.py  logging_config.py  observability.py  session_manager.py  settings.py
backend/controllers/: __init__.py  agatha_controller.py  base_controller.py
backend/docs/: RCA_PIPELINE_DESIGN.md  rca_workflow_mockup.html
backend/fixtures/: example_new_dataset.json  thirdlove_ads.json
backend/helpers/: __init__.py  gcs_logger.py  llm_client.py  rca_checks.py  reasoning_enricher.py  tools.py  validators.py
backend/models/: __init__.py  analyze_agent.py  anomaly_agent.py  execute_agent.py  rca_agent.py  recommend_agent.py
backend/routes/: __init__.py  agent_routes.py  auth_routes.py  meta_routes.py
backend/schemas/: __init__.py  requests.py  responses.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_agent_flow.py  test_api_endpoints.py
backend/tests/unit/: __init__.py  test_grounding.py  test_recommend_logic.py  test_validators.py
docs/: AI_IMPACT_STATEMENT.md  PITCH_DECK.md  brainstorm-session-2025-01-31.md  implementation-plan.md  requirements-agatha.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
tests/: test_anomalies.py  test_bq_integration.py  test_controller.py  test_execute_agent.py  (+4 more)
(+98 files in other folders)
