[project]
name = "agatha-backend"
version = "0.1.0"
description = "Agatha - Ad Spend Anomaly Detection Agent"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.5.0",
    "pydantic>=2.0",
    "google-cloud-bigquery>=3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
